# agentic-portfolio-manager

./: .gitignore  README.md  pyproject.toml
.agents/skills/testing-scanner/: SKILL.md
.github/workflows/: ci.yml
docs/: ci-setup.md  scanner-design.md
portfolio_manager/: __init__.py  analytics.py  cli.py  config.py  db.py  formatting.py  fx.py  markets.py  news.py  portfolio.py  scanner_cli.py  tui.py
portfolio_manager/agent/: __init__.py  daily_brief.py  ollama_client.py  summarizer.py
portfolio_manager/assets/: __init__.py  base.py  bond.py  etf.py  mutual_fund.py  option.py  stock.py
portfolio_manager/providers/: __init__.py  base.py  composite.py  google_finance_provider.py  yfinance_provider.py
portfolio_manager/scanner/: __init__.py  engine.py  opportunities.py  options_analysis.py  persistence.py  report.py  scheduler.py  scraper.py  sentiment.py  signals.py  technical.py  watchlist.py
tests/: test_analytics.py  test_assets.py  test_markets.py  test_news.py  test_portfolio.py  test_summarizer.py  test_yfinance_normalizer.py
