[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-portfolio-manager"
version = "0.1.0"
description = "Agentic CLI/TUI portfolio manager with multi-asset, multi-market support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vikas Desai" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "textual>=0.76.0",
    "sqlalchemy>=2.0.30",
    "yfinance>=0.2.40",
    "google-finance-scraper>=0.1.2",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dateutil>=2.9.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
portfolio = "portfolio_manager.cli:app"

[tool.setuptools.packages.find]
include = ["portfolio_manager*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
